# sailtheblack

./: 404.html  CLAUDE.md  black-flag--00-initial-debrief.md  black-flag--01-init-prd.md  black-flag--02-core-issue.md  black-flag--03-tactics-strategy.md  black-flag--04-authority.md  black-flag--07-actionables.md  black-flag--08-balanced-pragmatism.md  black-flag--09-critique.md  black-flag--10-time.md  broader-themes.md  critique.md  encryptcontent.cache  implementation-guide.md  implementation-plan.md  index.html  init-prd.md  mkdocs.yml  pyproject.toml  sitemap.xml  tactics-strategy.md  time.md  tools-resources.md  wiki-authentication-prd.md
.github/workflows/: deploy.yml
analysis/black-flag--01-init-prd/: index.html
analysis/black-flag--01-init-prd 2/: index.html
analysis/black-flag--06-broader-themes/: index.html
analysis/black-flag--06-broader-themes 2/: index.html
analysis/black-flag--08-balanced-pragmatism/: index.html
analysis/black-flag--08-balanced-pragmatism 2/: index.html
analysis/black-flag--09-critique/: index.html
analysis/black-flag--09-critique 2/: index.html
analysis/black-flag--10-time/: index.html
analysis/black-flag--10-time 2/: index.html
authority/black-flag--04-authority/: index.html
authority/black-flag--04-authority 2/: index.html
core-issue/black-flag--02-core-issue 2/: index.html
docs/: executive-summary.md  index.md
executive-summary/: index.html
executive-summary 2/: index.html
index 2/: index.html
search/: search_index.json
site/: 404.html  index.html
stylesheets/: extra.css
(+32 files in other folders)
